Fix nested flex-children spacing

--- a/css/main.css
+++ b/css/main.css
@@ -14526,84 +14526,96 @@ a.flex-children > * {
 .flex-cols-1 {
   margin: -0.5%;
 }
-.flex-cols-1 > * {
+.flex-cols-1 > *,
+.flex-cols-1 .flex-children {
   width: 100%;
   margin: 0.5%;
 }
 .flex-cols-2 {
   margin: -0.5%;
 }
-.flex-cols-2 > * {
+.flex-cols-2 > *,
+.flex-cols-2 .flex-children {
   width: 49%;
   margin: 0.5%;
 }
 .flex-cols-3 {
   margin: -0.5%;
 }
-.flex-cols-3 > * {
+.flex-cols-3 > *,
+.flex-cols-3 .flex-children {
   width: 32%;
   margin: 0.5%;
 }
 .flex-cols-4 {
   margin: -0.5%;
 }
-.flex-cols-4 > * {
+.flex-cols-4 > *,
+.flex-cols-4 .flex-children {
   width: 24%;
   margin: 0.5%;
 }
 .flex-cols-5 {
   margin: -0.5%;
 }
-.flex-cols-5 > * {
+.flex-cols-5 > *,
+.flex-cols-5 .flex-children {
   width: 19%;
   margin: 0.5%;
 }
 .flex-cols-6 {
   margin: -0.5%;
 }
-.flex-cols-6 > * {
+.flex-cols-6 > *,
+.flex-cols-6 .flex-children {
   width: 15%;
   margin: 0.5%;
 }
 .flex-cols-7 {
   margin: -0.5%;
 }
-.flex-cols-7 > * {
+.flex-cols-7 > *,
+.flex-cols-7 .flex-children {
   width: 13%;
   margin: 0.5%;
 }
 .flex-cols-8 {
   margin: -0.5%;
 }
-.flex-cols-8 > * {
+.flex-cols-8 > *,
+.flex-cols-8 .flex-children {
   width: 11%;
   margin: 0.5%;
 }
 .flex-cols-9 {
   margin: -0.5%;
 }
-.flex-cols-9 > * {
+.flex-cols-9 > *,
+.flex-cols-9 .flex-children {
   width: 10%;
   margin: 0.5%;
 }
 .flex-cols-10 {
   margin: -0.5%;
 }
-.flex-cols-10 > * {
+.flex-cols-10 > *,
+.flex-cols-10 .flex-children {
   width: 9%;
   margin: 0.5%;
 }
 .flex-cols-11 {
   margin: -0.5%;
 }
-.flex-cols-11 > * {
+.flex-cols-11 > *,
+.flex-cols-11 .flex-children {
   width: 8%;
   margin: 0.5%;
 }
 .flex-cols-12 {
   margin: -0.5%;
 }
-.flex-cols-12 > * {
+.flex-cols-12 > *,
+.flex-cols-12 .flex-children {
   width: 7%;
   margin: 0.5%;
 }
